# PuVS

./: .gitignore  LICENSE  README.md  docker-compose-rust.yml  todo-api-deployment.yaml  todo-api-service.yaml  todo-web-deployment.yaml  todo-web-service.yaml
k8s/: todo-api-deployment.yaml  todo-api-service.yaml  todo-db-deployment.yaml  todo-db-service.yaml  todo-web-service.yaml
rocket-todo-api/: Cargo.toml  todo-api.dockerfile
rocket-todo-api/src/: db.rs  main.rs
rocket_api/: Cargo.toml  todo-api.dockerfile
rocket_api/src/: main.rs
sample/otel-in-action/todoui-thymeleaf/: Dockerfile
yew-todo-web/: Cargo.toml  Trunk-docker.toml  Trunk.toml  index.html  small.todo-web.dockerfile  todo-web.dockerfile
yew-todo-web/src/: main.rs  routes.rs
