[package]
name = "rocket-todo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.rocket]
default-features = false
features = ["json"]
version = "0.5.0"

[dependencies.serde]
default-features = false
features = ["derive"]
version = "1.0.196"

[dependencies.serde_json]
default-features = false
version = "1.0.112"

[dependencies.mongodb]
version = "2.8.2"