[package]
name = "yew-todo-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Server-Side Rendering should work on all targets when feature ssr is enabled.
[dependencies.yew]
default-features = false
features = ["default", "ssr", "csr"]
version = "0.21.0"
